--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Ananth</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -61,8 +61,8 @@
           alt="unreal-engine" /></li>
       <li><img width="150" height="150" src="https://img.icons8.com/windows/150/3d-painter.png" alt="3d-painter" />
       </li>
-      <li><img width="150" height="150" src="../img/3ds max-logo.png" alt="3ds max"></li>
-      <li><img width="150" height="150" src="../img/coronarenderer-svgrepo-com.png" alt="Corona render"></li>
+      <li><img width="150" height="150" src="img/3ds max-logo.png" alt="3ds max"></li>
+      <li><img width="150" height="150" src="img/coronarenderer-svgrepo-com.png" alt="Corona render"></li>
       <li><img width="150" height="150" src="https://img.icons8.com/ios/150/adobe-photoshop--v1.png"
           alt="adobe-photoshop--v1" /></li>
       <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/java-coffee-cup-logo--v1.png"
@@ -92,10 +92,10 @@
     </ul>
     <div class="projects">
       <div class="p-img">
-        <img src="../img/3d-rendering-abstract-building.jpg">
-        <img src="../img/ai-generated-modern-styled-entryway.jpg">
-        <img src="../img/color-year-interior-design-space-with-furniture-decor.jpg">
-        <img src="../img/photorealistic-timber-house-interior-with-wooden-decor-furnishings.jpg">
+        <img src="img/3d-rendering-abstract-building.jpg">
+        <img src="img/ai-generated-modern-styled-entryway.jpg">
+        <img src="img/color-year-interior-design-space-with-furniture-decor.jpg">
+        <img src="img/photorealistic-timber-house-interior-with-wooden-decor-furnishings.jpg">
       </div>
     </div>
   </div>
@@ -104,7 +104,7 @@
 
 
   </div>
-  <script src='script.js'></script>
+  <script src='JS/script.js'></script>
 </body>
 
 </html>
