--- a/index.html
+++ b/index.html
@@ -44,14 +44,77 @@
       </div>
     </div>
   </div>
-  <div class="About">
-    <div class="about-A">
+  
+  <div class="about-me">
+      <div class="about-head">
+        <h3>Skills & Developments</h3>
+        <p>Innovating with Intelligence</p>
+      </div>
+    
+    <div class="about-box">
+      <div class="skill-box">
+        <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/frames.png" alt="frames"/></div>
+        <div class="s-pg">
+          <h3>
+            Web Design
+          </h3>
+          <p>Creating visually appealing, user-friendly, and responsive websites using modern design principles. Focused on clean layouts, intuitive navigation, and performance.</p>
+        </div>
+      </div>
+     <div class="skill-box">
+        <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-goofy-solid-kerismaker/96/external-3D-Design-graphic-design-goofy-solid-kerismaker.png" alt="external-3D-Design-graphic-design-goofy-solid-kerismaker"/></div>
+        <div class="s-pg">
+          <h3>
+            3D design
+          </h3>
+          <p>Crafting detailed 3D models for various purposes including architecture,product design, and animation.
+             Expertise in Blender and 3ds Max for professional-grade modeling.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/google-code.png" alt="google-code"/></div>
+        <div class="s-pg">
+          <h3>
+            Programming
+          </h3>
+          <p>Currently building a solid foundation in Java, JavaScript, C, and C++, with a focus on logic, clean code, and real-world problem-solving through practice projects.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-flatart-icons-solid-flatarticons/64/external-graphic-design-advertising-flatart-icons-solid-flatarticons.png" alt="external-graphic-design-advertising-flatart-icons-solid-flatarticons"/></div>
+        <div class="s-pg">
+          <h3>
+           Graphic Design
+          </h3>
+          <p>Designing compelling visuals, logos, posters, and UI elements with a keen sense of 
+            aesthetics and branding using tools like Photoshop and Illustrator.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="img-p"><img width="56" height="56" src="https://img.icons8.com/external-others-pike-picture/50/external-Architecture-modelling-others-pike-picture.png" alt="external-Architecture-modelling-others-pike-picture"/></div>
+        <div class="s-pg">
+          <h3>
+            3D Visualization
+          </h3>
+          <p>Bringing architectural and conceptual ideas to life with realistic renderings. 
+            Showcasing environments, interiors, and products with high visual fidelity.</p>
+        </div>
+      </div>
+      <div class="skill-box">
+        <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/53/external-Game-Development-gaming-vectorslab-glyph-vectorslab.png" alt="external-Game-Development-gaming-vectorslab-glyph-vectorslab"/></div>
+        <div class="s-pg">
+          <h3>
+            Game Development
+          </h3>
+          <p>Learning game design using Unreal Engine, with a focus on scene creation, interactive elements, and real-time rendering.</p>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="About">
       <h2>3D Design specializing in the creation of high-quality, detailed assets with a strong balance of artistic
         design and technical accuracy</h2>
-    </div>
-    <button>Learn More</button>
   </div>
-
   <div class="skills">
     <ul>
       <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/blender-3d.png" alt="blender-3d" />
