--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -47,7 +46,7 @@
   
   <div class="about-me">
       <div class="about-head">
-        <h3>Skills & Developments</h3>
+        <h3>Skills &amp; Developments</h3>
         <p>Innovating with Intelligence</p>
       </div>
     
@@ -55,7 +54,7 @@
       <div class="skill-box">
         <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/frames.png" alt="frames"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
             Web Design
           </h3>
           <p>Creating visually appealing, user-friendly, and responsive websites using modern design principles. Focused on clean layouts, intuitive navigation, and performance.</p>
@@ -64,7 +63,7 @@
      <div class="skill-box">
         <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-goofy-solid-kerismaker/96/external-3D-Design-graphic-design-goofy-solid-kerismaker.png" alt="external-3D-Design-graphic-design-goofy-solid-kerismaker"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
             3D design
           </h3>
           <p>Crafting detailed 3D models for various purposes including architecture,product design, and animation.
@@ -74,7 +73,7 @@
       <div class="skill-box">
         <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/google-code.png" alt="google-code"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
             Programming
           </h3>
           <p>Currently building a solid foundation in Java, JavaScript, C, and C++, with a focus on logic, clean code, and real-world problem-solving through practice projects.</p>
@@ -83,7 +82,7 @@
       <div class="skill-box">
         <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-flatart-icons-solid-flatarticons/64/external-graphic-design-advertising-flatart-icons-solid-flatarticons.png" alt="external-graphic-design-advertising-flatart-icons-solid-flatarticons"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
            Graphic Design
           </h3>
           <p>Designing compelling visuals, logos, posters, and UI elements with a keen sense of 
@@ -93,7 +92,7 @@
       <div class="skill-box">
         <div class="img-p"><img width="56" height="56" src="https://img.icons8.com/external-others-pike-picture/50/external-Architecture-modelling-others-pike-picture.png" alt="external-Architecture-modelling-others-pike-picture"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
             3D Visualization
           </h3>
           <p>Bringing architectural and conceptual ideas to life with realistic renderings. 
@@ -103,7 +102,7 @@
       <div class="skill-box">
         <div class="img-p"><img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/53/external-Game-Development-gaming-vectorslab-glyph-vectorslab.png" alt="external-Game-Development-gaming-vectorslab-glyph-vectorslab"/></div>
         <div class="s-pg">
-          <h3>
+          <h3 class="font-1">
             Game Development
           </h3>
           <p>Learning game design using Unreal Engine, with a focus on scene creation, interactive elements, and real-time rendering.</p>
