--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="Sub-1">
-      <p><span>Hi,I am ANANTH</span>
+      <p><span>Hi,I'm ANANTH</span>
         3D Designer and Software Developer</p>
     </div>
     <div class="social-media">
