--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
 
   </div>
+  <button class="circle-arrow" id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
   <script src='js/script.js'></script>
 </body>
 
