--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="about-me">
       <div class="about-head">
         <h3>Skills &amp; Developments</h3>
-        <p>Innovating with Intelligence</p>
+        <p>Expanding Knowledge Through Experience</p>
       </div>
     
     <div class="about-box">
