--- a/index.html
+++ b/index.html
@@ -114,26 +114,26 @@
     </div>
     <div class="About">
       <h2>3D Design specializing in the creation of high-quality, detailed assets with a strong balance of artistic
-        design and technical accuracy</h2>
+        design and technical accuracy.</h2>
   </div>
   <div class="skills">
     <ul>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/blender-3d.png" alt="blender-3d" />
+      <li><img src="https://img.icons8.com/ios-filled/150/blender-3d.png" alt="blender-3d" />
       </li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/unreal-engine.png"
+      <li><img  src="https://img.icons8.com/ios-filled/150/unreal-engine.png"
           alt="unreal-engine" /></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/windows/150/3d-painter.png" alt="3d-painter" />
+      <li><img  src="https://img.icons8.com/windows/150/3d-painter.png" alt="3d-painter" />
       </li>
-      <li><img width="150" height="150" src="img/3ds max-logo.png" alt="3ds max"></li>
-      <li><img width="150" height="150" src="img/coronarenderer-svgrepo-com.png" alt="Corona render"></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios/150/adobe-photoshop--v1.png"
+      <li><img  src="img/3ds max-logo.png" alt="3ds max"></li>
+      <li><img src="img/coronarenderer-svgrepo-com.png" alt="Corona render"></li>
+      <li><img  src="https://img.icons8.com/ios/150/adobe-photoshop--v1.png"
           alt="adobe-photoshop--v1" /></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/java-coffee-cup-logo--v1.png"
+      <li><img  src="https://img.icons8.com/ios-filled/150/java-coffee-cup-logo--v1.png"
           alt="java-coffee-cup-logo--v1" /></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/python.png" alt="python" /></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/150/c-plus-plus-logo.png"
+      <li><img  src="https://img.icons8.com/ios-filled/150/python.png" alt="python" /></li>
+      <li><img  src="https://img.icons8.com/ios-filled/150/c-plus-plus-logo.png"
           alt="c-plus-plus-logo" /></li>
-      <li><img width="150" height="150" src="https://img.icons8.com/ios-filled/100/js.png" alt="js" /></li>
+      <li><img src="https://img.icons8.com/ios-filled/100/js.png" alt="js" /></li>
     </ul>
     <div class="back-img"></div>
     <div class="sn">
