add new content and some changes

--- a/index.html
+++ b/index.html
@@ -140,13 +140,12 @@
       <h2>Design in 3D, Power with Code</h2>
     </div>
   </div>
-  <div class="project-tt">
-    <p>
-      Project involves creating detailed 3D models using Blender, focusing on modeling and texturing to produce
-      realistic or stylized digital objects
-    </p>
-  </div>
   <div class="project">
+  <div class="about-head">
+        <h3>Project showcases</h3>
+        <p>Expertise Delivered With Impact</p>
+    </div>
+  
     <div class="filter-buttons">
       <button onclick="setCategory('All')">All</button>
       <button onclick="setCategory('Natural')">Natural</button>
@@ -161,10 +160,27 @@
     </div>
     <div class="pagination-dots" id="paginationDots"></div>
   </div>
-  
+  <div class="About">
+    <h2>
+      Project involves creating detailed 3D models using Blender, focusing on modeling and texturing to produce
+      realistic or stylized digital objects.
+    </h2>
+  </div>
 
   <div class="contact">
-
+    <h2>Get in touch</h2>
+    <p>Whether you're looking for a dynamic website, immersive 3D visuals, or help bringing a game concept to life  I&#39;d love to hear from you.
+Let&#39;s talk about how I can help make your vision real.</p>
+<img width="50" height="50" src="icons/icons8-mail-50.png" alt="mail"/>
+<img width="50" height="50" src="icons/icons8-location-50.png" alt="marker"/>
+      <div class="social-media-contact">
+        <button ></button><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/linkedin.png" alt="linkedin"/>
+        </button>
+        <button>
+        <img width="50" height="50" src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/50/external-artstation-a-leading-showcase-platform-for-games-film-media-and-entertainment-artists-logo-bold-tal-revivo.png" alt="external-artstation-a-leading-showcase-platform-for-games-film-media-and-entertainment-artists-logo-bold-tal-revivo"/>
+        </button>
+        <button><img width="50" height="50" src="https://img.icons8.com/glyph-neue/50/instagram-new--v1.png" alt="instagram-new--v1"/></button>
+      </div>
 
   </div>
   <button class="circle-arrow" id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
