new changes update

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <button onclick="setCategory('All')">All</button>
       <button onclick="setCategory('Natural')">Natural</button>
       <button onclick="setCategory('Cars')">Cars</button>
-    </div>
+    </div></div>
     <div class="projects">
       <button class="arrow" id="leftBtn"></button>
       <div class="carousel-track-container">
@@ -159,7 +159,8 @@
       <button class="arrow" id="rightBtn"></button>
     </div>
     <div class="pagination-dots" id="paginationDots"></div>
-  </div>
+    
+  
   <div class="About">
     <h2>
       Project involves creating detailed 3D models using Blender, focusing on modeling and texturing to produce
